Remove `App-Widget-` prefix from CSS classes

--- a/styles/App/Widget/Menu.less
+++ b/styles/App/Widget/Menu.less
@@ -5,7 +5,7 @@
 @App-Widget-Menu-activeColor: @darkPrimaryColor;
 
 
-.App-Widget-Menu {
+.Menu {
   background-color: @App-Widget-Menu-primaryColor;
 
   ul {
