Improve styling of the header

--- a/styles/Config.less
+++ b/styles/Config.less
@@ -8,3 +8,19 @@
 @primaryTextColor:   #212121;
 @secondaryTextColor: #727272;
 @dividerColor:       #B6B6B6;
+
+@screen-xx-small: 320 / 16em;
+@screen-x-small: 480 / 16em;
+@screen-small: 640 / 16em;
+@screen-medium: 768 / 16em;
+@screen-large: 1080 / 16em;
+@screen-x-large: 1440 / 16em;
+@screen-xx-large: 2160 / 16em;
+
+@font-xx-small: 10 / 16rem;
+@font-x-small: 12 / 16rem;
+@font-small: 14 / 16rem;
+@font-medium: 16 / 16rem;
+@font-large: 20 / 16rem;
+@font-x-large: 24 / 16rem;
+@font-xx-large: 32 / 16rem;
