--- a/styles/App/App.less
+++ b/styles/App/App.less
@@ -1,14 +1,18 @@
 @import (multiple) '../Config';
 
-button:hover,
-a:hover,
-input:hover,
-textarea:hover,
-:focus {
-  outline: 0;
-  box-shadow: inset 0 0 0.1em 0.125em @accentColor;
+@headerBackgroundColor: @primaryColor;
+@headingFontSize: @font-large;
+
+.App_header {
+  background-color: @headerBackgroundColor;
 }
 
-button {
-  cursor: pointer;
+.App_heading {
+  font-size: @headingFontSize;
+  line-height: 2;
+  text-align: center;
+  margin: 0;
+}
+
+.App_navigation {
 }
