--- a/styles/Main.less
+++ b/styles/Main.less
@@ -1,3 +1,4 @@
 & { @import '~normalize.css/normalize.css'; }
+& { @import 'Global'; }
 & { @import 'App/App'; }
-& { @import 'App/Widget/Menu'; }
+& { @import 'App/MainMenu'; }
