Define min page width

--- a/styles/App/App.less
+++ b/styles/App/App.less
@@ -3,6 +3,10 @@
 @headerBackgroundColor: @primaryColor;
 @headingFontSize: @font-large;
 
+.App {
+  min-width: @screen-xx-small;
+}
+
 .App_header {
   background-color: @headerBackgroundColor;
 }
