--- a/styles/App/App.less
+++ b/styles/App/App.less
@@ -1,22 +1,47 @@
 @import (multiple) '../Config';
 
-@headerBackgroundColor: @primaryColor;
-@headingFontSize: @font-large;
-
 .App {
   min-width: @screen-xx-small;
 }
 
 .App_header {
-  background-color: @headerBackgroundColor;
+  background-color: @primaryColor;
 }
 
 .App_heading {
-  font-size: @headingFontSize;
+  font-size: @font-large;
   line-height: 2;
   text-align: center;
   margin: 0;
+  color: @textPrimaryColor;
+  background-color: @darkPrimaryColor;
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .App_navigation {
+}
+
+.App_main {
+  padding: 0 0.4rem;
+  color: @primaryTextColor;
+
+  h1 {
+    font-size: @font-xx-large;
+  }
+
+  a {
+    color: @secondaryTextColor;
+  }
+}
+
+.App_footer {
+  padding: 1rem 0.4rem;
+  background-color: @primaryColor;
+  color: @textPrimaryColor;
+  a {
+    color: inherit;
+  }
 }
